# informatica_parser12

./: .gitignore  CLAUDE.md  README.md  lineage_extractionlogic.txt  mapping_identification.txt  pipeline.py  proc_generater.txt  program.md  pyproject.toml
autoresearch/: program_lineage.md  program_mapping.md  program_procgen.md  program_skills.md  run_loop.py
config/: env.yaml.example
outputs/: aggregator_mapping_lineage.json  aggregator_mapping_proc.sql  complex_chain_lineage.json  complex_chain_proc.sql  expression_mapping_lineage.json  expression_mapping_proc.sql  joiner_mapping_lineage.json  joiner_mapping_proc.sql  lookup_mapping_lineage.json  lookup_mapping_proc.sql  mapping_sheet.json  router_mapping_lineage.json  router_mapping_proc.sql  simple_passthrough_lineage.json  simple_passthrough_mapping_sheet.json  simple_passthrough_proc.sql  sq_override_lineage.json  sq_override_proc.sql  truncate_reload_lineage.json  truncate_reload_proc.sql  upsert_mapping_lineage.json  upsert_mapping_proc.sql
scripts/: bootstrap_db.sql  run_eval.sh
skills/: README.md  loader.py
skills/column_matching/: SKILL.md
skills/informatica_xml/: SKILL.md
skills/oracle_to_snowflake_types/: SKILL.md
skills/snowflake_sql_scripting/: SKILL.md
skills/tests/: test_skills.py
step1_lineage/: eval.py  extractor.py  function_map.py
step1_lineage/tests/: test_extractor.py
step2_mapping/: eval.py  matcher.py  synonym_dict.py
step2_mapping/tests/: test_matcher.py
step3_procgen/: eval.py  generator.py
step4_testing/: reconciler.py  validator.py
(+27 files in other folders)
